5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1667_2320.log
== TEST (2019-04-16 16:07:30) 
-- CODE:
nome = int(input('nome desejado: '))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:50) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994\\8.789
-- ERROR:
File "XXXX", line 2
    harry = 2.9994\\8.789
                        ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:31) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony: 1.674
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:42) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2/2
rony: 1.674
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:48) 
-- CODE:
nome = int(input('nome desejado: '))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:24) 
-- CODE:
nome = int(input('nome desejado: '))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:28) 
-- CODE:
nome = int(input('nome desejado: '))
harry= 2.9994//8789

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:35) 
-- CODE:
nome = int(input('nome desejado: '))
harry= 2.9994//8789
rony = 1.674//10.789
if

-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:40) 
-- CODE:
nome = int(input('nome desejado: '))
harry= 2.9994//8789
rony = 1.674//10.789
if (harry = rony)
-- ERROR:
File "XXXX", line 4
    if (harry = rony)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:08) 
-- CODE:
nome = int(input('nome desejado: '))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:34) 
-- CODE:
nome = int(input('nome desejado: ', harry, rony))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input('nome desejado: ', harry, rony))
NameError: name 'harry' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:43) 
-- CODE:
nome = int(input('nome desejado: '))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:27) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:59) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony = 1.674//10.789
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:22) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony = 1.674//10.789
if(nome = harry)
print('2994//8.789')
-- ERROR:
File "XXXX", line 4
    if(nome = harry)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:32) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony = 1.674//10.789
if(nome = harry):
print('2994//8.789')
-- ERROR:
File "XXXX", line 4
    if(nome = harry):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:37) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony = 1.674//10.789
if(nome = harry):
   print('2994//8.789')
else:
   print('1.674//10789')
-- ERROR:
File "XXXX", line 4
    if(nome = harry):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:06) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony = 1.674//10.789

if(nome = harry):
   print('2994//8.789')
else:
   print('1.674//10789')
-- ERROR:
File "XXXX", line 5
    if(nome = harry):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:30) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony = 1.674//10.789

if(nome = harry):
   print('a')
else:
   print('b')
-- ERROR:
File "XXXX", line 5
    if(nome = harry):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:52) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony = 1.674//10.789

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:16) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.9994//8.789
rony = 1.674//10.789

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:30) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2.999
rony = 1.674//10.789

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:41) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2999
rony = 1.674//10.789

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:31) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 

-- ERROR:
File "XXXX", line 2
    harry = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:36) 
-- CODE:
nome = int(input('nome desejado: '))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:09) 
-- CODE:
nome = int(input('nome desejado: '))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:38) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2
rony = 3


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = int(input())
ValueError: invalid literal for int() with base 10: 'HARRY'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:37) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2
rony = 3
if (rony>harry)
print ('2.9994//8789')
-- ERROR:
File "XXXX", line 4
    if (rony>harry)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:56) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2
rony = 3
if (rony>harry)
print ('2/2')
-- ERROR:
File "XXXX", line 4
    if (rony>harry)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:17) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2
rony = 3
if (rony>harry)
print ('oi')
else

-- ERROR:
File "XXXX", line 4
    if (rony>harry)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:26) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2
rony = 3
if (rony>harry):
print ('oi')
else

-- ERROR:
File "XXXX", line 5
    print ('oi')
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:34) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2
rony = 3
if (rony>harry):
print ('oi')
-- ERROR:
File "XXXX", line 5
    print ('oi')
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:47) 
-- CODE:
nome = int(input('nome desejado: '))
harry = 2
rony = 3
if (rony>harry):
-- ERROR:
File "XXXX", line 5
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
